# voxel-experiment

./: Cargo.toml  LICENCE-APACHE.md  LICENCE-MIT.md  Readme.md  Tasks.md  justfile  notes.md  readme.md
assets/: block_blueprints.ron  blockinfo.ron  ghost_info.ron
assets/textures/: .blocks.png-autosave.kra
assets/voxels/: air.vox  car.vox  car2.vox  char.vox  cobblestone.vox  fence.vox  grass.vox  planks-oak.vox  stone.vox  wood-oak.vox
crates/image_to_voxel_cube/: Cargo.toml
crates/image_to_voxel_cube/src/: main.rs
crates/image_to_voxel_cube/voxels/: dirt.vox  glowstone.vox  grass.vox  planks-oak.vox  stone.vox  wood-oak.vox
crates/mcrs_automata/: Cargo.toml
crates/mcrs_automata/src/: lighting.rs
crates/mcrs_blueprints/: Cargo.toml
crates/mcrs_blueprints/src/: blocks.rs  flagbank.rs  ghosts.rs  lib.rs  plugin.rs
crates/mcrs_chemistry/: Cargo.toml
crates/mcrs_chemistry/src/: lib.rs
crates/mcrs_chemistry/src/tests/: lighting_test.rs
crates/mcrs_core/: Cargo.toml
crates/mcrs_core/src/: camera.rs  lib.rs  plugin.rs
crates/mcrs_debug/: Cargo.toml
crates/mcrs_debug/src/: lib.rs  plugin.rs  ui.rs
crates/mcrs_flag_bank/: Cargo.toml
crates/mcrs_flag_bank/src/: flagbank.rs  lib.rs
crates/mcrs_info/: Cargo.toml
crates/mcrs_info/src/: blocks.rs  ghosts.rs  lib.rs
crates/mcrs_input/: Cargo.toml
crates/mcrs_input/src/: lib.rs  plugin.rs
crates/mcrs_macros/: Cargo.toml
crates/mcrs_macros/src/: lib.rs  test.rs
crates/mcrs_net/: Cargo.toml
crates/mcrs_net/src/: client.rs  lib.rs  plugin.rs  server.rs
crates/mcrs_physics/: Cargo.toml
crates/mcrs_physics/src/: character.rs  intersect.rs  lib.rs  plugin.rs  raycast.rs
crates/mcrs_render/: Cargo.toml
crates/mcrs_render/src/: block_texture.rs  blocktexture.rs  boxes_world.rs  camera.rs  chunk_mesh.rs  lib.rs  plugin.rs  settings.rs  voxel_world.rs
crates/mcrs_settings/: Cargo.toml
crates/mcrs_settings/src/: args.rs  lib.rs  plugin.rs
crates/mcrs_storage/: Cargo.toml
crates/mcrs_storage/src/: block.rs  chunk.rs  lib.rs  universe.rs
crates/mcrs_universe/: Cargo.toml
crates/mcrs_universe/src/: block.rs  chunk.rs  ghost.rs  lib.rs  plugin.rs  test.rs  universe.rs
crates/voxel_automata/: Cargo.toml
crates/voxel_automata/src/: lighting.rs
crates/voxel_flag_bank/: Cargo.toml
crates/voxel_flag_bank/src/: flagbank.rs  lib.rs
crates/voxel_gen/: Cargo.toml
crates/voxel_info/: Cargo.toml
crates/voxel_info/src/: lib.rs
crates/voxel_physics/: Cargo.toml
crates/voxel_physics/src/: character.rs  lib.rs  plugin.rs  raycast.rs
crates/voxel_render/: Cargo.toml
crates/voxel_render/src/: blocktexture.rs  boxes_world.rs  lib.rs  voxel_world.rs
crates/voxel_storage/: Cargo.toml
crates/voxel_storage/src/: block.rs  chunk.rs  chunk_map.rs  flagbank.rs  grid.rs  lib.rs  universe.rs
docs/: commands.md  data_model.md  level_opening.md
resources/voxels/: stone.vox
src/: camera.rs  debug.rs  diagnostics.rs  hotbar.rs  input.rs  instanced_material.rs  lighting.rs  main.rs  player.rs  raycast.rs  saveload.rs  settings.rs  spawn_player.rs  terrain.rs  terrain_editing.rs  terrain_generation.rs  ui.rs  voxel_engine.rs  voxel_shapes.rs
src/chemistry/: lighting.rs
src/chemistry/tests/: lighting_test.rs
src/net/: client.rs  mod.rs  plugin.rs  server.rs
src/terrain_generation/: generator.rs  mod.rs  plugin.rs  requested.rs  sun_beams.rs
src/terrain_generation/generators/: crazy_hills.rs  mod.rs
src/voxel_pipeline/: attachments.rs  compute.rs  mip.rs  mod.rs  rebuild.rs  voxel_world.rs
src/voxel_pipeline/denoise/: mod.rs  node.rs
src/voxel_pipeline/shaders/: common.wgsl  denoise.wgsl  rebuild.wgsl  (+2 more)
src/voxels/: grid.rs  grid_hierarchy.rs  mod.rs  raycast.rs  voxel_world.rs
tests/: macro_test.rs
tools/image_to_voxel_cube/: .gitignore
(+47 files in other folders)
