[package]
name = "voxel-experiment"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.12.0"
bevy_egui = "0.24.0"
egui_plot = "0.24.0"
tracing = "0.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
noise = "0.8.2"
renet = { version = "0.0.14", features = ["serde"] }
bevy_renet = { version = "0.0.10", features = ["serde"] }
serde = "1.0.193"
bincode = "1.3.3"
clap = { version = "4.4.12", features = ["derive"] }

mcrs_physics = { path = "crates/mcrs_physics" }
mcrs_render = { path = "crates/mcrs_render" }
mcrs_debug = { path = "crates/mcrs_debug" }
mcrs_net = { path = "crates/mcrs_net" }

[workspace]
members = ["crates/*"]
exclude = ["tools/image_to_voxel_cube"]
