[package]
name = "voxel-experiment"
version = "0.1.1"
edition = "2021"

[dependencies]
bevy = "0.14"
bevy_egui = "0.28"
egui_plot = "0.28"
tracing = "0.1"
rand = "0.8"
rand_chacha = "0.3"
noise = "0.8"
renet = { git = "https://github.com/jacopograndi/renet-bevy-0.14", features = [
    "serde",
] }
bevy_renet = { git = "https://github.com/jacopograndi/renet-bevy-0.14", features = [
    "serde",
] }
serde = "1"
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }

mcrs_physics = { path = "crates/mcrs_physics" }
mcrs_render = { path = "crates/mcrs_render" }
mcrs_net = { path = "crates/mcrs_net" }
mcrs_universe = { path = "crates/mcrs_universe" }

[workspace]
members = ["crates/*"]
exclude = ["tools/image_to_voxel_cube"]
