[package]
name = "voxel-experiment"
version = "0.1.2"
edition = "2021"

[dependencies]
bevy = "0.15"
bevy_egui = "0.32"
egui_plot = "0.30"
tracing = "0.1"
rand = "0.8"
rand_chacha = "0.3"
noise = "0.8"
renet = "1.0"
bevy_renet = "1.0"
serde = "1"
ron = "0.8"
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0.0"
bytemuck = "1.16"

mcrs_physics = { path = "crates/mcrs_physics" }
mcrs_render = { path = "crates/mcrs_render" }
mcrs_net = { path = "crates/mcrs_net" }
mcrs_universe = { path = "crates/mcrs_universe" }

[workspace]
members = ["crates/*"]
