[package]
name = "mcrs_chemistry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.0"

mcrs_storage = { path = "../mcrs_storage" }
mcrs_blueprints = { path = "../mcrs_blueprints" }
mcrs_flag_bank = { path = "../mcrs_flag_bank" }
