[package]
name = "mcrs_core"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.12.0"

mcrs_storage = { path = "../mcrs_storage" }
mcrs_blueprints = { path = "../mcrs_blueprints" }
mcrs_net = { path = "../mcrs_net" }
mcrs_physics = { path = "../mcrs_physics" }
mcrs_render = { path = "../mcrs_render" }
mcrs_input = { path = "../mcrs_input" }
mcrs_settings = { path = "../mcrs_settings/" }
